feat: start bigquery article

--- a/_posts/2020-09-24-examples.md
+++ b/_posts/2020-09-24-examples.md
@@ -12,6 +12,8 @@ Exemples de contenu:
 
 ![logo netlify](/assets/images/devmachine.svg)
 
+[![logo netlify clickable](/assets/images/devmachine.svg)](/assets/images/devmachine.svg)
+
 ## Show me the code !
 
 ```java
