--- a/_posts/2024-02-19-webrtc.md
+++ b/_posts/2024-02-19-webrtc.md
@@ -8,6 +8,7 @@ Nous partageons ici une introduction au WebRTC avec un exemple d'implémentation
 
 - [Introduction](#introduction)
 - [WebRTC, kézako ?](#kesaco)
+- [CORS et https](#cors)
 - [Mise en place du serveur Node](#serverNode)
 - [Mise en place du client Vue 3](#vue3)
 - [Ressources](#ressources)
@@ -16,7 +17,9 @@ Nous partageons ici une introduction au WebRTC avec un exemple d'implémentation
 
 Nous verrons tout d'abord ce qu'est la technologie **WebRTC** et ce qu'elle apporte avec **HTML5**.
 
-Ensuite, nous passerons en détail les différentes étapes pour mettre en place notre chat vocal avec **Node.js** et **Vue 3**.
+Ensuite, nous passerons à la pratique en mettant en place un site de visio-conférence, où l'on pourra rejoindre différents canaux statiques et participer à la visio-conférence avec les utilisateurs déjà connecté à ce canal.
+
+Nous verrons étape par étape comment mettre en place ce site avec **Node.js** et **Vue 3**.
 
 ## WebRTC, kézako ? <a class="anchor" name="kesaco"></a>
 
@@ -27,6 +30,14 @@ On y trouve 3 API :
 - **MediaStream** pour récupérer le flux d'un média de l'utilisateur
 - **RTCPeerConnection** pour la communication des flux de données entre navigateurs
 - **RTCDataChannel** pour le partage de données entre utilisateurs
+
+## CORS et https
+
+Avant de commencer la pratique, deux points me semble important à aborder avant toutes choses.
+
+Tout d'abord, le site utilisera un serveur **Node.js** et une application **Vue 3** qui devront communiquer entre-elles, et cela implique donc l'autorisation de **CORS**(Cross-Origin Ressource Sharing). La mise en place de CORS de manière propre et adapté à vos besoins est un tout autre sujet, aussi il ne sera pas abordé dans ce tutoriel et je me contenterai pour ma part d'utiliser un plugin sur navigateur pour les autoriser sur mon application.
+
+De même, le test de l'application sur téléphone nécessitera que le site soit en https, **WebRTC** bloquant l'accès aux préiphériques utilisateurs si le site n'est pas sécurisé. Cela ne sera pas non plus traité dans ce tutoriel.
 
 ## Mise en place du serveur Node <a class="anchor" name="serverNode"></a>
 
@@ -144,7 +155,7 @@ vue create client
 
 Ici, nous choisirons l'option `Default (Vue 3)`.
 
-Ensuite, nous allons installer les packages client de nos outils pour la gestion des sockets, **socket.io-client** et **simple-signal-client** :
+Ensuite, nous allons installer les paquets client de nos outils pour la gestion des sockets, **socket.io-client** et **simple-signal-client** :
 
 ```bash
 npm i --save socket.io-client simple-signal-client
