fix(posts): fix some error after review

--- a/_posts/2024-04-24-webrtc.md
+++ b/_posts/2024-04-24-webrtc.md
@@ -17,7 +17,7 @@ Nous partageons ici une introduction au WebRTC avec un exemple d'implémentation
 
 Nous verrons tout d'abord ce qu'est la technologie **WebRTC** et ce qu'elle apporte avec **HTML5**.
 
-Ensuite, nous passerons à la pratique en mettant en place un site de visio-conférence, où l'on pourra rejoindre différents canaux statiques et participer à la visio-conférence avec les utilisateurs déjà connecté à ce canal.
+Ensuite, nous passerons à la pratique en mettant en place un site de visio-conférence, où l'on pourra rejoindre différents canaux statiques et participer à la visio-conférence avec les utilisateurs déjà connectés à ce canal.
 
 Nous verrons étape par étape comment mettre en place ce site avec **Node.js** et **Vue 3**.
 
@@ -37,7 +37,7 @@ Avant de commencer la pratique, deux points me semble important à aborder avant
 
 Tout d'abord, le site utilisera un serveur **Node.js** et une application **Vue 3** qui devront communiquer entre-elles, et cela implique donc l'autorisation de **CORS**(Cross-Origin Ressource Sharing). La mise en place de CORS de manière propre et adapté à vos besoins est un tout autre sujet, aussi il ne sera pas abordé dans ce tutoriel et je me contenterai pour ma part d'utiliser un plugin sur navigateur pour les autoriser sur mon application.
 
-De même, le test de l'application sur téléphone nécessitera que le site soit en https, **WebRTC** bloquant l'accès aux préiphériques utilisateurs si le site n'est pas sécurisé. Cela ne sera pas non plus traité dans ce tutoriel.
+De même, le test de l'application sur téléphone nécessitera que le site soit en https, **WebRTC** bloquant l'accès aux périphériques utilisateurs si le site n'est pas sécurisé. Cela ne sera pas non plus traité dans ce tutoriel.
 
 ## Mise en place du serveur Node <a class="anchor" name="serverNode"></a>
 
