fix(article): fix some grammar error

--- a/_posts/2024-04-24-webrtc.md
+++ b/_posts/2024-04-24-webrtc.md
@@ -33,9 +33,9 @@ On y trouve 3 API :
 
 ## CORS et https
 
-Avant de commencer la pratique, deux points me semble important à aborder avant toutes choses.
+Avant de commencer la pratique, deux points me semblent important à aborder avant toutes choses.
 
-Tout d'abord, le site utilisera un serveur **Node.js** et une application **Vue 3** qui devront communiquer entre-elles, et cela implique donc l'autorisation de **CORS**(Cross-Origin Ressource Sharing). La mise en place de CORS de manière propre et adapté à vos besoins est un tout autre sujet, aussi il ne sera pas abordé dans ce tutoriel et je me contenterai pour ma part d'utiliser un plugin sur navigateur pour les autoriser sur mon application.
+Tout d'abord, le site utilisera un serveur **Node.js** et une application **Vue 3** qui devront communiquer entre-elles, et cela implique donc l'autorisation de **CORS** (Cross-Origin Ressource Sharing). La mise en place de CORS de manière propre et adaptée à vos besoins est un tout autre sujet, aussi il ne sera pas abordé dans ce tutoriel et je me contenterai pour ma part d'utiliser un plugin sur navigateur pour les autoriser sur mon application.
 
 De même, le test de l'application sur téléphone nécessitera que le site soit en https, **WebRTC** bloquant l'accès aux périphériques utilisateurs si le site n'est pas sécurisé. Cela ne sera pas non plus traité dans ce tutoriel.
 
